<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/header_bkg" >

        <Button
            android:id="@+id/header_back_btn"
            style="@style/button_style"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/header_back" />

        <ImageView
            android:id="@+id/header_commit"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/header_more"
            android:src="@drawable/header_commit_img" />

        <TextView
            android:id="@+id/header_title"
            style="@style/TitleTextView"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:focusable="true"
            android:text="@string/app_name"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/suggestion_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/edittext_selector"
            android:gravity="top|left"
            android:hint="@string/more_feedback_1"
            android:maxLines="10"
            android:singleLine="false"
            android:textColorHint="#949393"
            android:textSize="16sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittext_selector"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/more_feedback_2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@color/white"
            android:hint="@string/more_feedback_2_1"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/email_checked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:text="@string/action_settings"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="invisible" />

</RelativeLayout>