<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.pyxx.chinesetourism.view.HeaderView
        android:id="@+id/more_collect_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/more_collect_color"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/collect_wineshop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/more_mycollect_1"
            android:textColor="@color/header_bkg" />

        <TextView
            android:id="@+id/collect_attractions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/more_mycollect_2" />

        <TextView
            android:id="@+id/collect_travel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/more_mycollect_3" />
    </LinearLayout>

</LinearLayout>