<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.pyxx.chinesetourism.view.HeaderView
        android:id="@+id/six_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.pyxx.chinesetourism.view.StretchScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" >

                <TextView
                    android:id="@+id/six_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/six_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/six_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/six_detail_name"
                    android:layout_marginTop="5dp"
                    android:text="@string/six_time"
                    android:textColor="@color/divide"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/six_comefrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/six_detail_time"
                    android:layout_alignBottom="@+id/six_detail_time"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/six_come_from"
                    android:textColor="@color/divide"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/six_content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/six_detail_time"
                    android:layout_marginTop="15dp"
                    android:text="@string/one_detail"
                    android:textColor="#A8A8A8"
                    android:textSize="16sp" />

                <com.pyxx.chinesetourism.custom.DashedLine
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/six_content1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/six_comefrom"
                    android:layout_alignBottom="@+id/six_comefrom"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/six_comefrom"
                    android:text="来源:"
                    android:textColor="@color/divide"
                    android:textSize="12sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/six_detail_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/default_detail" />

            <TextView
                android:id="@+id/six_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/three_detail"
                android:textColor="#5C5C5C"
                android:textSize="20sp" />
        </LinearLayout>
    </com.pyxx.chinesetourism.view.StretchScrollView>

</LinearLayout>