<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 旅游景点 -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EDECEC"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/three_ico_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/default_img" />

        <TextView
            android:id="@+id/three_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/three_ico_img"
            android:text="@string/three_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/three_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/three_ico_img"
            android:layout_alignLeft="@+id/three_name"
            android:layout_below="@+id/three_name"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:maxLines="3"
            android:text="@string/three_detail"
            android:textColor="#A7A7A7"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/to_detail_img"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/more_arrow" />
    </RelativeLayout>

</LinearLayout>